--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
  Description:    This is a child theme created for CardHero. 
  Author:         Jacktator
  Author URI:     https://jacktator.com/
- Template:       TwentyNineteen
+ Template:       twentynineteen
  Version:        1.0.0
 */
  
