Switched to new Parent Theme

--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 /*
  Theme Name:     CardHero
- Theme URI:      CardHero.com.au
+ Theme URI:      https://github.com/jacktator/CardHero_WP
  Description:    This is a child theme created for CardHero. 
  Author:         Jacktator
  Author URI:     https://jacktator.com/
- Template:       twentynineteen
+ Template:       creditcard
  Version:        1.0.0
 */
  
-/*@import url("../twentynineteen/style.css");*/
+/*@import url("../creditcard/style.css");*/
  
 /* =Theme customization starts here
 ------------------------------------------------------- */
