--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@charset 'utf-8';
 /*
  Theme Name:     CardHero
  Theme URI:      https://github.com/jacktator/CardHero_WP
@@ -6,6 +7,7 @@
  Author URI:     https://jacktator.com/
  Template:       creditcard
  Version:        1.0.0
+ Text Domain:  	 creditcard
 */
  
 /*@import url("../creditcard/style.css");*/
