--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@
  Custom CSS to adjust the 'Compare' button for Alike plugin
  Author:         Jacktator
  Author URI:     https://jacktator.com/
- Plugin:         Alike
+ Theme:         Credit Card
 */
 .trx_addons_scroll_to_top.show {
     bottom: 8em;
