--- a/style.css
+++ b/style.css
@@ -29,6 +29,12 @@
  bottom: -40px;
  right: 71px;
 }
+@media (max-width: 959px) {
+ .alike-compare-widget-button {
+  bottom: -50px;
+  right: 80px;
+ }
+}
 
 /*  
  Custom CSS to adjust the 'Compare' button for Alike plugin
