--- a/style.css
+++ b/style.css
@@ -35,6 +35,9 @@
   right: 80px;
  }
 }
+.rq-alike-compare .rq-alike-topic-p .rq-alike-topic {
+	padding: 10px; /* Temporiry Fix: https://redqsupport.ticksy.com/ticket/1843123/ */
+}
 
 /*  
  Custom CSS to adjust the 'Compare' button for Alike plugin
