--- a/style.css
+++ b/style.css
@@ -58,3 +58,16 @@
   right: 0.5em;
  }
 }
+
+/*  
+ Custom CSS to adjust the 'Compare' button for Alike plugin
+ Author:         Jacktator
+ Author URI:     https://jacktator.com/
+ Theme:         Credit Card
+*/
+@media (max-width: 767px) {
+	.sc_layouts_column {
+		width: inherit !important;
+	}
+}
+
